Issue #3212670 by Sakthivel M, shashwat-tiwari, kiran.kadam911, Gauravmahlawat, mherchel: Olivero: Z-index issue with the search bar

--- a/core/themes/olivero/css/components/site-header.css
+++ b/core/themes/olivero/css/components/site-header.css
@@ -68,6 +68,7 @@
 }
 
 .site-header__inner {
+  z-index: 1; /* Appear in front of Drupal's tabs. */
   flex-grow: 1;
   width: calc(100vw - 5.625rem);
   background: #fff;
